# frobbo

./: .gitignore  LICENSE  frobbo.cabal  stack.yaml
src/Frobbo/: DOMVar.hs  DOMVarReactive.hs
