name:                frobbo
version:             0.1.0.0
synopsis:            Reactive DOM in Haskell
license:             AllRightsReserved
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola@iki.fi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Frobbo.DOMVar
                       Frobbo.DOMVarReactive
  build-depends:       base >=4.9 && <5.0
                      ,contravariant
                      ,ghcjs-base
                      ,stm
                      ,text
                      ,transformers
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  default-language:    Haskell2010

